[tool.poetry]
name = "Vessel-Replication-Pipeline"
version = "0.1.0"
description = ""
authors = ["Sebastian Hansen <sebastian.hansen@datalachemy.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
pyodbc = "^4.0.34"
tqdm = "^4.64.0"
SQLAlchemy = "^1.4.39"
urllib3 = "^1.26.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
